--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compile ('org.springframework.boot:spring-boot-starter-web')
+    compile ('org.apache.httpcomponents:httpclient:4.5.2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
