--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 server:
-  port: 8080
+    port: 8080
 
 logging:
-  level:
-    ROOT: DEBUG
+    level:
+        ROOT: INFO
 
 github:
-   api:
-    url: https://api.github.com/repos/
+    api:
+        url: https://api.github.com/repos
+        timeout: 5000
