--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,9 @@ logging:
 github:
     api:
         url: https://api.github.com/repos
-        timeout: 5000
+        connectionTimeout: 5000
+        socketTimeout: 2000
+        requestTimeout: 5000
+        maxRedirects: 0
+        expectContinue : FALSE
+
