--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ test {
 dependencies {
     compile ('org.springframework.boot:spring-boot-starter-web')
     compile ('org.apache.httpcomponents:httpclient:4.5.2')
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.7")
+    compile ('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.7')
+    compile ('org.springframework.retry:spring-retry:1.2.0.RELEASE')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
